--- a/App/templates/App/success.html
+++ b/App/templates/App/success.html
@@ -1,14 +1,17 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <title>Succès</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="bg-green-50 min-h-screen flex items-center justify-center">
-  <div class="bg-white p-10 rounded-lg shadow-md text-center">
-    <h1 class="text-3xl font-bold text-green-600 mb-4">Félicitations 🎉</h1>
-    <p class="text-lg text-gray-700">Vous êtes connecté avec succès.</p>
+{% extends 'base.html' %}
+
+{% block title %}Succès{% endblock %}
+
+{% block content %}
+
+  <!-- Contenu centré -->
+  <div class="flex justify-center items-center mt-20">
+    <div class="bg-white p-10 rounded-lg shadow-md text-center">
+      <h1 class="text-3xl font-bold text-green-600 mb-4">Félicitations 🎉</h1>
+      <p class="text-lg text-gray-700">Vous êtes connecté avec succès.</p><br>
+      <a href="{% url 'logout' %}" class="mt-4 bg-green-600 text-white px-4 py-2 rounded-md hover:bg-green-700 transition">
+        Déconnexion
+      </a>
+    </div>
   </div>
-</body>
-</html>
+{% endblock %}
