création pages et ajout du formulaire de contact

--- a/App/templates/App/login.html
+++ b/App/templates/App/login.html
@@ -14,8 +14,8 @@
       <form method="post" class="space-y-4">
         {% csrf_token %}
         <div>
-          <label for="my_email" class="block text-sm font-medium text-gray-700">Email</label>
-          <input type="text" name="my_email" id="my_email" class="w-full border rounded px-3 py-2" required>
+          <label for="my_username" class="block text-sm font-medium text-gray-700">Nom d'utilisateur</label>
+          <input type="text" name="my_username" id="my_username" class="w-full border rounded px-3 py-2" required>
         </div>
 
         <div>
